# autotranscode

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/autotranscode/: __about__.py  __init__.py  __main__.py  ffmpeg.py
src/autotranscode/cli/: __init__.py
tests/: __init__.py
